--- a/src/components/Qi/qi.scss
+++ b/src/components/Qi/qi.scss
@@ -59,11 +59,11 @@
   position: relative;
   bottom: 24px;
   border-radius: 8px;
-  font-size: 36px;
+  font-size: 32px;
   background-color: var(--opp-color);
   box-shadow: 0 0 8px var(--color);
   margin: 0;
-  padding: 4px;
+  padding: 0 4px;
 }
 
 .azr_hand {
