--- a/src/scss/favors.scss
+++ b/src/scss/favors.scss
@@ -12,7 +12,7 @@
 
 .azr_favorsTitle {
   color: var(--color);
-  font-size: 36px;
+  font-size: 32px;
   position: absolute;
   top: -10%;
   left: 50%;
@@ -37,14 +37,19 @@
   width: 100%;
 
   .playername {
+    display: inline-block;
     font-size: 24px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     position: absolute;
     bottom: -2%;
     right: -2%;
     border-radius: 8px;
-    padding: 4px;
+    padding: 0 4px;
     margin: 0;
-    width: fit-content;
+    max-width: 100%;
+    width: max-content;
+    overflow: hidden;
   }
 }
 
