--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -7,7 +7,7 @@
   background-color: var(--opp-color);
   border-radius: 4px;
   box-shadow: 0 0 4px var(--color);
-  padding: 2px;
+  padding: 0 2px;
 }
 
 .azr_customFont-title {
